@@ -107,8 +107,15 @@ public:
 
 class TestWebPopupMenuImpl : public WebPopupMenuImpl {
 public:
-    TestWebPopupMenuImpl(WebWidgetClient* client) : WebPopupMenuImpl(client) { }
+    static PassRefPtr<TestWebPopupMenuImpl> create(WebWidgetClient* client)
+    {
+        return adoptRef(new TestWebPopupMenuImpl(client));
+    }
+
     ~TestWebPopupMenuImpl() { }
+
+private:
+    TestWebPopupMenuImpl(WebWidgetClient* client) : WebPopupMenuImpl(client) { }
 };
 
 class TestWebWidget : public WebWidget {
@@ -135,10 +142,10 @@ public:
 
 class TestWebViewClient : public WebViewClient {
 public:
-    TestWebViewClient() : m_webPopupMenu(&m_webWidgetClient) { }
+    TestWebViewClient() : m_webPopupMenu(TestWebPopupMenuImpl::create(&m_webWidgetClient)) { }
     ~TestWebViewClient() { }
 
-    virtual WebWidget* createPopupMenu(WebPopupType) { return &m_webPopupMenu; }
+    virtual WebWidget* createPopupMenu(WebPopupType) { return m_webPopupMenu.get(); }
 
     // We need to override this so that the popup menu size is not 0
     // (the layout code checks to see if the popup fits on the screen).
@@ -152,7 +159,7 @@ public:
 
 private:
     TestWebWidgetClient m_webWidgetClient;
-    TestWebPopupMenuImpl m_webPopupMenu;
+    RefPtr<TestWebPopupMenuImpl> m_webPopupMenu;
 };
 
 class TestWebFrameClient : public WebFrameClient {
